might help if I call the function to fire

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       var el = document.getElementById('ripsum');
       el.textContent = text;
     }
+
+    ready(getRipsum);
   </script>
 </body>
 </html>
