--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         if (request.status >= 200 && request.status < 400) {
           // Success!
           var resp = request.responseText;
-          addRipsum(resp);
+          addRipsum(resp.data);
         } else {
           // We reached our target server, but it returned an error
         }
