--- a/index.html
+++ b/index.html
@@ -2,33 +2,118 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ripsum Demo Page</title>
+  <title>Ripsum | Kyle Shevlin</title>
   <link rel="stylesheet" href="style.css">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+  <link href="prism.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <a href="https://github.com/kyleshevlin/ripsum" class="github-corner">
-    <svg width="80" height="80" viewBox="0 0 250 250">
+  <a class="github-corner" href="https://github.com/kyleshevlin/ripsum">
+    <svg height="80" viewBox="0 0 250 250" width="80">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-      <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" class="octo-arm"></path>
-      <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
+      <path class="octo-arm" d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor"></path>
+      <path class="octo-body" d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor"></path>
     </svg>
   </a>
   <header class="header">
     <div class="container">
-      <h1>Ripsum</h1>
+      <h1 class="header-heading">Ripsum</h1>
+      <span class="header-logo">
+        <svg enable-background="new 0 0 74.992 49.485" version="1.1" viewBox="0 0 74.992 49.485" x="0px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" y="0px">
+          <polygon points="11.956,0 0,11.898 37.406,49.485 74.992,12.08 62.971,0 "></polygon>
+        </svg>
+      </span>
     </div>
   </header>
 
   <div class="container">
     <article>
       <p>
-        Ripsum is a small Ruby gem that adds a helper method for outputting random amounts of lorem ipsum <em>per</em> page load. Each time you refresh, you get a new set of words.
+        Ripsum is a small Ruby gem that adds a helper method for outputting random amounts of Lorem Ipsum <em>per</em> page load. Each time you refresh the page, you get a new set of words.
       </p>
+
       <p>
         The philosophy behind Ripsum is simple: designs should be stress tested. Don't fill your page with perfect, static text. You'll never find the problems that way. Instead, randomize your text to find edge cases you otherwise wouldn't notice. <strong>The next paragraph is an example of Ripsum in action.</strong>
       </p>
 
-      <p id="ripsum"></p>
+      <p id="ripsum" class="ripsum"></p>
+
+      <h3>Installation</h3>
+      <p>
+        Add the following to your Gemfile:
+      </p>
+      <pre>
+        <code class="langauge-ruby">
+          gem 'ripsum'
+        </code>
+      </pre>
+
+      <p>And then execute:</p>
+      <pre>
+        <code class="language-bash">
+          bundle install
+        </code>
+      </pre>
+
+      <p>Or Install it yourself via:</p>
+      <pre>
+        <code class="language-bash">
+          $ gem install ripsum
+        </code>
+      </pre>
+
+      <h3>Usage</h3>
+      <pre>
+        <code class="language-ruby"><%= ripsum(100) %></code>
+      </pre>
+
+      <p>Or</p>
+
+      <pre>
+        <code class="language-ruby"><%= ripsum(100, 0.5) %> # With Variance</code>
+      </pre>
+
+      <p>
+        The <code class="language-ruby">ripsum</code> method takes two arguments. The first argument is the standard word count desired. In the example above, that would be 100 words.
+      </p>
+
+      <p>
+        The second argument is the variance. This argument is optional. The default value for variance is 0 and can be omitted from the method call. This would result in the exact number of words you specify with each page load, though the words themselves will continue to be random. If you would like variance in the word output, you must use a floating point decimal with a leading zero. Thus, in the example above, we desire a possible variance of 50%, so we use the decimal 0.5.
+      </p>
+
+      <p>
+        Ripsum takes the standard word count and calculates the minimum and maximum word count based on the variance. Then, it randomly chooses a number in that range and outputs that amount of Lorem ipsum text.
+      </p>
+
+      <h3>Configuration</h3>
+      <p>
+        Currently, the only configurable option is the library of words that Ripsum uses. You can pass your own string of words in a configuration block. If you're using Rails, create a file in the <code class="language-bash">config/initializers</code> directory, perhaps named <code class="language-bash">ripsum_initializer.rb</code> (though it can be named whatever you would like).
+      </p>
+
+      <p>
+        Make sure to restart your server. It is an initializer file after all.
+      </p>
+
+      <h3>Psst. There's More!</h3>
+      <p>
+        You might be wondering why a Heroku app has only a home page and no apparent app. That's because the app is a secret.
+      </p>
+
+      <p>
+        If you append two numbers to the end of the URL, you will hit the Ripsum API and return a small JSON object of random Lorem Ipsum text. In case you need a Ripsum and aren't using a Ruby framework, now you can AJAX some fresh words straight to your application.
+      </p>
+
+      <p>To do so, do something like this:</p>
+      <pre>
+        <code class="language-bash">
+          http://ripsum.herokuapp.com/100/50
+        </code>
+      </pre>
+
+      <p>
+        The only difference between this and the Ruby method is that variance should be supplied as an integer of the percent you would like and not a floating point number. Hence, 50 instead of 0.5. Got it? Good!
+      </p>
     </article>
   </div>
 
@@ -38,6 +123,7 @@
     </div>
   </footer>
 
+  <script src="prism.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
