remove whitespace in code blocks

--- a/index.html
+++ b/index.html
@@ -43,18 +43,10 @@
       <p>
         Add the following to your Gemfile:
       </p>
-      <pre>
-        <code class="langauge-ruby">
-          gem 'ripsum'
-        </code>
-      </pre>
+      <pre><code class="language-ruby">gem 'ripsum'</code></pre>
 
       <p>And then execute:</p>
-      <pre>
-        <code class="language-bash">
-          bundle install
-        </code>
-      </pre>
+      <pre><code class="language-bash">bundle install</code></pre>
 
       <p>Or Install it yourself via:</p>
       <pre>
@@ -64,15 +56,11 @@
       </pre>
 
       <h3>Usage</h3>
-      <pre>
-        <code class="language-ruby"><%= ripsum(100) %></code>
-      </pre>
+      <pre><code class="language-ruby"><%= ripsum(100) %></code></pre>
 
       <p>Or</p>
 
-      <pre>
-        <code class="language-ruby"><%= ripsum(100, 0.5) %> # With Variance</code>
-      </pre>
+      <pre><code class="language-ruby"><%= ripsum(100, 0.5) %> # With Variance</code></pre>
 
       <p>
         The <code class="language-ruby">ripsum</code> method takes two arguments. The first argument is the standard word count desired. In the example above, that would be 100 words.
@@ -105,11 +93,7 @@
       </p>
 
       <p>To do so, do something like this:</p>
-      <pre>
-        <code class="language-bash">
-          http://ripsum.herokuapp.com/100/50
-        </code>
-      </pre>
+      <pre><code class="language-bash">http://ripsum.herokuapp.com/100/50</code></pre>
 
       <p>
         The only difference between this and the Ruby method is that variance should be supplied as an integer of the percent you would like and not a floating point number. Hence, 50 instead of 0.5. Got it? Good!
