one more code block to clean up, remove prism css as its already in the minified css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Ripsum | Kyle Shevlin</title>
-  <link href="prism.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="style.css">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
@@ -49,11 +48,7 @@
       <pre><code class="language-bash">bundle install</code></pre>
 
       <p>Or Install it yourself via:</p>
-      <pre>
-        <code class="language-bash">
-          $ gem install ripsum
-        </code>
-      </pre>
+      <pre><code class="language-bash">$ gem install ripsum</code></pre>
 
       <h3>Usage</h3>
       <pre><code class="language-ruby"><%= ripsum(100) %></code></pre>
