--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <polygon points="11.956,0 0,11.898 37.406,49.485 74.992,12.08 62.971,0 "></polygon>
         </svg>
       </span>
+      <h3>Random Lorem Ipsum with every page load</h3>
     </div>
   </header>
 
